# SpeechMOS

./: .gitignore  LICENSE  README.md  hubconf.py  hubconf_test.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: test.yml
speechmos/utmos22/: README.md  fairseq_alt.py
speechmos/utmos22/strong/: model.py  model_test.py
