[tool.poetry]
name = "speechmos"
version = "0.0.1"
description = "Easy-to-Use Speech MOS predictors 🎧"
authors = ["tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/SpeechMOS"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
tqdm = "4.*"
## torch = "2.0.0" # Poetry is not good for version control of PyTorch (it has many many variants for a version, so poetry become confused)

[tool.poetry.dev-dependencies]
types-tqdm = "4.*"
pytest = "7.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
  "pointless-string-statement",
]